--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Campground</title>
-</head>
-<body>
+<% layout('layout/boilerplate') %>
+
     <h1>EdIT Campground</h1>
     <form action="/campgrounds/<%= campground._id  %>?_method=PUT" method="POST">
         <div>
@@ -19,5 +13,3 @@
          <button>Update Campground</button>
      </form>
      <a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
-</body>
-</html>
