--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<% layout('layout/boilerplate') %>
+
     <form action="/campgrounds" method="POST">
        <div>
         <label for="title">Title</label>
@@ -17,5 +11,3 @@
         </div> 
         <button>Add Campground</button>
     </form>
-</body>
-</html>
