--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<% layout('layout/boilerplate') %>
     <h1>Details</h1>
     
         <li><%= campground.title %></li>
@@ -19,5 +12,3 @@
         <a href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
 
 
-    </body>
-</html>
