--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,6 +3,8 @@
     
         <li><%= campground.title %></li>
         <li><%= campground.location %></li>
+        <img src="<%= campground.image %>" alt="">
+        <p><%= campground.description  %></p>
         <div>
         <form action="/campgrounds/<%= campground._id  %>?_method=DELETE" method="POST">
             <button>Delete Campground</button>
@@ -10,5 +12,5 @@
         </div>
         <a href="/campgrounds/">All Campgrounds</a>
         <a href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
-
+        
 
