--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,15 +1,41 @@
 <% layout('layout/boilerplate') %>
-
-    <h1>EdIT Campground</h1>
-    <form action="/campgrounds/<%= campground._id  %>?_method=PUT" method="POST">
-        <div>
-         <label for="title">Title</label>
-         <input type="text" placeholder="title" name="campground[title]" value="<%= campground.title %>">
-         </div>
-         <div>
-         <label for="location">location</label>
-         <input type="text" placeholder="location" name="campground[location]" value="<%= campground.location %>">
-         </div> 
-         <button>Update Campground</button>
-     </form>
-     <a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
+<h1>EDIT CAMPGROUND</h1>
+     <div class="row">
+        <h1 class="text-center" >New Campgrounds</h1>
+        <div class="col-6 offset-3">
+            <form action="/campgrounds/<%= campground._id  %>?_method=PUT" method="POST">
+                <div class="mb-3">
+                 <label class="form-label" for="title">Title</label>
+                 <input class="form-control" type="text" placeholder="title" name="campground[title]" value="<%= campground.title %>">
+                 </div>
+                 <div class="mb-3">
+                 <label class="form-label" for="location">Location</label>
+                 <input class="form-control" type="text" placeholder="location" name="campground[location]" value="<%= campground.location %>">
+                 </div> 
+                 <div class="mb-3">
+                    <label class="form-label" for="image">Image</label>
+                    <input class="form-control" type="text" placeholder="image" name="campground[image]" value="<%= campground.image %>">
+                 </div>
+                 <div class="mb-3">
+                    <label class="form-label" for="description">Description</label>
+                    <textarea class="form-control" type="text" placeholder="location" name="campground[description]" value="<%= campground.description %>"></textarea>
+                    </div> 
+                    <div class="mb-3">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1">$</span>
+                            <input type="text" class="form-control" id="price" placeholder="0" aria-label="price" aria-describedby="price-label" name="campground[price]" value="<%= campground.price %>">
+                          </div>
+                          
+                    </div>
+    
+                 <div class="mb-3">
+                 <button class="btn btn-danger">Update Campground</button>
+                </div>
+             
+                </form>
+                <a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
+            </div>
+    
+        
+    </div>
+    
