--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,13 +1,40 @@
 <% layout('layout/boilerplate') %>
 
-    <form action="/campgrounds" method="POST">
-       <div>
-        <label for="title">Title</label>
-        <input type="text" placeholder="title" name="campground[title]">
-        </div>
-        <div>
-        <label for="location">location</label>
-        <input type="text" placeholder="location" name="campground[location]">
-        </div> 
-        <button>Add Campground</button>
-    </form>
+<div class="row">
+    <h1 class="text-center" >New Campgrounds</h1>
+    <div class="col-6 offset-3">
+        <form action="/campgrounds" method="POST">
+            <div class="mb-3">
+             <label class="form-label" for="title">Title</label>
+             <input class="form-control" type="text" placeholder="title" name="campground[title]">
+             </div>
+             <div class="mb-3">
+             <label class="form-label" for="location">Location</label>
+             <input class="form-control" type="text" placeholder="location" name="campground[location]">
+             </div> 
+             <div class="mb-3">
+                <label class="form-label" for="image">Image</label>
+                <input class="form-control" type="text" placeholder="image" name="campground[image]">
+             </div>
+             <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" type="text" placeholder="location" name="campground[description]"></textarea>
+                </div> 
+                <div class="mb-3">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">$</span>
+                        <input type="text" class="form-control" id="price" placeholder="0" aria-label="price" aria-describedby="price-label" name="campground[price]">
+                      </div>
+                      
+                </div>
+
+             <div class="mb-3">
+             <button class="btn btn-danger">Add Campground</button>
+            </div>
+         
+            </form>
+         <a href="/campgrounds">All campgrounds</a>
+    </div>
+
+    
+</div>
