--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,28 +3,38 @@
      <div class="row">
         <h1 class="text-center" >New Campgrounds</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds/<%= campground._id  %>?_method=PUT" method="POST">
+            <form action="/campgrounds/<%= campground._id  %>?_method=PUT" method="POST" novalidate class="validated-form">
                 <div class="mb-3">
                  <label class="form-label" for="title">Title</label>
-                 <input class="form-control" type="text" placeholder="title" name="campground[title]" value="<%= campground.title %>">
-                 </div>
+                 <input class="form-control" type="text" placeholder="title" name="campground[title]" value="<%= campground.title %>" required >
+                <div class="class-feedback">Looks good</div> 
+                
+                </div>
                  <div class="mb-3">
                  <label class="form-label" for="location">Location</label>
-                 <input class="form-control" type="text" placeholder="location" name="campground[location]" value="<%= campground.location %>">
-                 </div> 
+                 <input class="form-control" type="text" placeholder="location" name="campground[location]" value="<%= campground.location %>" required >
+                 <div class="class-feedback">Looks good</div> 
+ 
+                </div> 
                  <div class="mb-3">
                     <label class="form-label" for="image">Image</label>
-                    <input class="form-control" type="text" placeholder="image" name="campground[image]" value="<%= campground.image %>">
-                 </div>
+                    <input class="form-control" type="text" placeholder="image" name="campground[image]" value="<%= campground.image %>" required >
+                    <div class="class-feedback">Looks good</div> 
+ 
+                </div>
                  <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" placeholder="location" name="campground[description]" value="<%= campground.description %>"></textarea>
-                    </div> 
+                    <textarea class="form-control" type="text" placeholder="location" name="campground[description]" value="<%= campground.description %>" required ></textarea>
+                    <div class="class-feedback">Looks good</div> 
+    
+                </div> 
                     <div class="mb-3">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">$</span>
-                            <input type="text" class="form-control" id="price" placeholder="0" aria-label="price" aria-describedby="price-label" name="campground[price]" value="<%= campground.price %>">
-                          </div>
+                            <input type="text" class="form-control" id="price" placeholder="0" aria-label="price" aria-describedby="price-label" name="campground[price]" value="<%= campground.price %>" required >
+                            <div class="class-feedback">Looks good</div> 
+  
+                        </div>
                           
                     </div>
     
