--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,28 +3,41 @@
 <div class="row">
     <h1 class="text-center" >New Campgrounds</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST">
+        <form action="/campgrounds" method="POST" novalidate class="validated-form">
             <div class="mb-3">
              <label class="form-label" for="title">Title</label>
-             <input class="form-control" type="text" placeholder="title" name="campground[title]">
-             </div>
+             <input class="form-control" type="text" placeholder="title" name="campground[title]" required>
+            <div class="valid-feedback">Looks good!</div>
+            </div>
+
              <div class="mb-3">
              <label class="form-label" for="location">Location</label>
-             <input class="form-control" type="text" placeholder="location" name="campground[location]">
-             </div> 
+             <input class="form-control" type="text" placeholder="location" name="campground[location]"required>
+             <div class="valid-feedback">Looks good!</div>
+ 
+            </div>
+
              <div class="mb-3">
                 <label class="form-label" for="image">Image</label>
-                <input class="form-control" type="text" placeholder="image" name="campground[image]">
-             </div>
-             <div class="mb-3">
+                <input class="form-control" type="text" placeholder="image" name="campground[image]"required>
+                <div class="valid-feedback">Looks good!</div>
+ 
+            </div>
+             
+            <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" placeholder="location" name="campground[description]"></textarea>
-                </div> 
-                <div class="mb-3">
+                <textarea class="form-control" type="text" placeholder="location" name="campground[description]"required></textarea>
+                <div class="valid-feedback">Looks good!</div>
+    
+            </div> 
+                
+            <div class="mb-3">
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="basic-addon1">$</span>
-                        <input type="text" class="form-control" id="price" placeholder="0" aria-label="price" aria-describedby="price-label" name="campground[price]">
-                      </div>
+                        <input type="text" class="form-control" id="price" placeholder="0" aria-label="price" aria-describedby="price-label" name="campground[price]"required>
+                        <div class="valid-feedback">Looks good!</div>
+  
+                    </div>
                       
                 </div>
 
@@ -38,3 +51,7 @@
 
     
 </div>
+
+
+
+
