error validations server side

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -34,7 +34,7 @@
             <div class="mb-3">
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="basic-addon1">$</span>
-                        <input type="text" class="form-control" id="price" placeholder="0" aria-label="price" aria-describedby="price-label" name="campground[price]"required>
+                        <input type="number" class="form-control" id="price" placeholder="0" aria-label="price" aria-describedby="price-label" name="campground[price]"required>
                         <div class="valid-feedback">Looks good!</div>
   
                     </div>
