--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,7 @@
 <% layout('layout/boilerplate') %>
 <div class="row">
-    <div class="card">
-        <div class="col-6 offset-3">
-            <div class="card" style="width: 18rem;">
+        <div class="col-6">
+            <div class="card mb-3" >
                 <img src="<%= campground.image %>" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title"><%= campground.title %></h5>
@@ -22,8 +21,38 @@
                 </div>
               </div>
         </div>
+<div class="col-6">
+  
+  <h2>Leave A review</h2>
+  <form class="mb-3 validated-form" action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate >
+    <div class="mb-3">
+      <label class="form-label" for="rating">Rating</label>
+      <input class="form-range" type="range" name="review[rating]" min="1"  max="5" id="rating">
     </div>
+    <div class="mb-3">
+      <label class="from-label" for="body">Review</label>
+      <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required ></textarea>
+      <div class="valid-feedback">
+        Looks good!
+    </div>
+    </div>
+    <button class="btn btn-success">Submit Review</button>
+  </form>
+  <% for(let review of campground.reviews){ %>
+    <div class="card mb-3">
+  <div class="card-body">
+    <h5 class="card-title">Rating: <%= review.rating  %></h5>
+    <p class="card-text">Review: <%= review.body  %></p>
+
+    <form action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
+    <button class="btn btn-danger">Delete</button>
+    </form>
+  </div>
+  </div>
+  <% } %>
 </div>
+      </div>
+      </div>
 
 
 
