--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,20 +9,25 @@
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item"><%= campground.location %></li>
+                  <li class="list-group-item">Submitted by <%= campground.author.username %></li>
+
                   <li class="list-group-item"><%= campground.price %></li>
                 </ul>
+
+                <% if(currentUser && campground.author.equals(currentUser._id)) {%>
                 <div class="card-body">
                   <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-warning">Edit Campground</a>
                   <form class="d-inline" action="/campgrounds/<%= campground._id  %>?_method=DELETE" method="POST">
                     <button class="btn btn-danger">Delete Campground</button>
                 </form>
-
-
                 </div>
+                <% } %>
               </div>
         </div>
+
+
 <div class="col-6">
-  
+  <% if(currentUser){ %>
   <h2>Leave A review</h2>
   <form class="mb-3 validated-form" action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate >
     <div class="mb-3">
@@ -42,13 +47,18 @@
     <div class="card mb-3">
   <div class="card-body">
     <h5 class="card-title">Rating: <%= review.rating  %></h5>
+    <h6 class="card-subtitle mb-2 text-muted">by <%= review.author.username %></h6>
     <p class="card-text">Review: <%= review.body  %></p>
+    <% if(currentUser && review.author.equals(currentUser._id)) {%>
 
     <form action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
     <button class="btn btn-danger">Delete</button>
     </form>
+    <% } %>
+
   </div>
   </div>
+  <% } %>
   <% } %>
 </div>
       </div>
