--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -20,12 +20,8 @@
                 </div>
             </div>
             <div class="mb-3">
-                <label class="form-label" for="image">Image Url</label>
-                <input class="form-control" type="text" id="image" name="campground[image]"
-                    value="<%=campground.image %>" required>
-                <div class="valid-feedback">
-                    Looks good!
-                </div>
+                <label class="form-label" for="image">Add Image</label>
+                <input type="file" name="image" id="image">
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
@@ -47,6 +43,16 @@
                     Looks good!
                 </div>
             </div>
+            <div class="mb-3">
+                <% campground.images.forEach(function (img,i) {%>
+                    <img class="img-thumbnail" src="<%= img.thumbnail %>" alt="">
+                    <div class="form-check-inline">
+                        <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%= img.filename %>">
+                    </div>
+                    <label for="image-<%=i%>">DELETE</label>
+                <%}) %>
+            </div>
+
             <div class="mb-3">
                 <button class="btn btn-info">Update Campground</button>
             </div>
