--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
 <div class="row">
     <h1 class="text-center" >New Campgrounds</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST" novalidate class="validated-form">
+        <form action="/campgrounds" method="POST"  class="validated-form" enctype="multipart/form-data" novalidate>
             <div class="mb-3">
              <label class="form-label" for="title">Title</label>
              <input class="form-control" type="text" placeholder="title" name="campground[title]" required>
@@ -16,13 +16,16 @@
              <div class="valid-feedback">Looks good!</div>
  
             </div>
-
-             <div class="mb-3">
+            <div class="mb-3">
+                <label for="image" class="form-label">Upload Image</label>
+                <input class="form-control" type="file" id="image" name="image" multiple>
+              </div>
+             <!-- <div class="mb-3">
                 <label class="form-label" for="image">Image</label>
                 <input class="form-control" type="text" placeholder="image" name="campground[image]"required>
                 <div class="valid-feedback">Looks good!</div>
  
-            </div>
+            </div> -->
              
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
