--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,13 @@
 <% layout('layout/boilerplate') %>
 <link rel="stylesheet" href="/stylesheets/star.css">
 
+
 <div class="row">
         <div class="col-6">
+          
+<div id='map' style='width: 400px; height: 300px;'>
+
+</div>
           <div id="campgroundCarousel" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -115,5 +120,9 @@
       </div>
       </div>
 
-
-
+      <script>
+        const mapToken = '<%=process.env.MAPBOX_TOKEN%>';
+        const campground = '<%-JSON.stringify(campground)%>'
+      </script>
+      
+      <script src="/scripts/showPageMap.js"></script>
