--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,5 +1,5 @@
 <% layout('layout/boilerplate') %>
-    
+<div id="map" style="width: 100%; height: 500px;"></div>    
     <h1>All campgrounds</h1>
     <div>
         <a href="/campgrounds/new">Add new campground</a>
@@ -8,10 +8,15 @@
     <% for (let campground of campgrounds){ %>
         <div class="card" mb-3>
             <div class="col-md-4">
-                <img class="img-fluid" alt="" src="<%= campground.image %>">
+                <%if(campground.images.length) {%>
+                    <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
+                    <% }else {%>
+                    <img class="img-fluid" alt="" src="https://res.cloudinary.com/dmnf19is4/image/upload/v1693072723/YelpCamp/mr59fab6g0tlmgc4iqty.jpg">                    <% } %>
                 <div class="col-md-8">
                     <div class="card-body">
                     <h5 class="card-title"><%= campground.title  %></h5>
+                    <h5 class="card-title"><%= campground.properties.popUpMarkup  %></h5>
+
                     <p class="card-text"><%= campground.description %></p>
                     <p class="card-text">
                         <small class="text-muted"><%= campground.location %></small>
@@ -29,4 +34,8 @@
 
     <% } %>
     </ul>
-
+    <script>
+        const mapToken = '<%=process.env.MAPBOX_TOKEN%>';
+        const campgrounds = {features: JSON.parse('<%- JSON.stringify(campgrounds).replace(/'/g, "\\'") %>')} ;
+ </script>
+<script src="/scripts/clusterMap.js"></script>
