--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,12 +1,12 @@
 <% layout('layout/boilerplate') %>
-<div id="map" style="width: 100%; height: 500px;"></div>    
+<div id="cluster-map"></div>    
     <h1>All campgrounds</h1>
     <div>
         <a href="/campgrounds/new">Add new campground</a>
     </div>
     <ul>
     <% for (let campground of campgrounds){ %>
-        <div class="card" mb-3>
+        <div class="card mb-3" >
             <div class="col-md-4">
                 <%if(campground.images.length) {%>
                     <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
@@ -35,7 +35,7 @@
     <% } %>
     </ul>
     <script>
-        const mapToken = '<%=process.env.MAPBOX_TOKEN%>';
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
         const campgrounds = {features: JSON.parse('<%- JSON.stringify(campgrounds).replace(/'/g, "\\'") %>')} ;
  </script>
 <script src="/scripts/clusterMap.js"></script>
