--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,7 +5,7 @@
 <div class="row">
         <div class="col-6">
           
-<div id='map' style='width: 400px; height: 300px;'>
+<div id='map'>
 
 </div>
           <div id="campgroundCarousel" class="carousel slide">
@@ -121,7 +121,7 @@
       </div>
 
       <script>
-        const mapToken = '<%=process.env.MAPBOX_TOKEN%>';
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
         const campground = '<%-JSON.stringify(campground)%>'
       </script>
       
