--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -36,6 +36,8 @@
     </ul>
     <script>
         const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-        const campgrounds = {features: JSON.parse('<%- JSON.stringify(campgrounds).replace(/'/g, "\\'") %>')} ;
- </script>
+        const campgrounds = {features: JSON.parse('<%- JSON.stringify(campgrounds) %>')} ;        
+         </script>
 <script src="/scripts/clusterMap.js"></script>
+
+
